# video_capture

./: CMakeLists.txt  README.md
inc/: image_handler.h  mw_capture.h
object_detect/inc/: improcess.h  obj_detect.h
object_detect/src/: demo.cpp  improcess.cpp  obj_detect.cpp
src/: CaptureByInput.cpp  Makefile  image_handler.cpp  main.cpp  mw_capture.cpp
